Fixed color contrast issue in add new dataset page

--- a/ckan/public/base/css/main-rtl.css
+++ b/ckan/public/base/css/main-rtl.css
@@ -11943,7 +11943,6 @@ select[data-module=autocomplete] {
 }
 
 .editor .editor-info-block a {
-  color: #187794;
   text-decoration: none;
 }
 
