--- a/ckan/public-bs3/base/css/main-rtl.css
+++ b/ckan/public-bs3/base/css/main-rtl.css
@@ -10126,7 +10126,6 @@ select[data-module=autocomplete] {
 }
 
 .editor .editor-info-block a {
-  color: #187794;
   text-decoration: none;
 }
 
